2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/GapContent.java:
	(insertString): Throw exception when argument is below
	zero.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/PlainDocument.java:
	(insertUpdate): Extended if-expression, added
	code to generate another Element when newly inserted characters
	and old ones will be on the same line.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/DefaultCaret.java:
	(mouseDragged): Do selection when shift is pressed.
	(mouseClicked): Implemented.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/PlainDocument.java: Fix copyright header,
	added author tags.
	(insertUpdate): Do not copy the whole document any more, added some
	more variables to prevent needless method calls.

2006-03-06  Christian Thalinger <twisti@complang.tuwien.ac.at>

	* configure.ac: Check for FREETYPE2.  This is a reverted patch and
	is required on Darwin.
	* native/jni/gtk-peer/Makefile.am (AM_LDFLAGS): Added FREETYPE2.
	(AM_CFLAGS): Likewise.

2006-03-06  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add updates for 0.90 release.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* configure.ac (VERSION): Set to 0.90-pre.

2006-03-04  Tom Tromey  <tromey@redhat.com>

	* javax/swing/SpringLayout.java (Constraints): New constructor.
	* javax/swing/Spring.java (width): New method.
	(height): Likewise.
	(scale): Likewise.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* gnu/java/net/protocol/http/HTTPConnection.java (Pool.get): Remove
	existing connection from pool before returning.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* gnu/xml/stream/SAXParser.java (parse(InputSource)): Ignore
	exceptions thrown by handlers while cleaning up and rethrow original
	exception.

2006-03-04  Tom Tromey  <tromey@redhat.com>

	* java/beans/PropertyDescriptor.java (createPropertyEditor): New
	method.
	(findConstructor): Likewise.
	(instantiateClass): Likewise.