@@ -1,3 +1,9 @@
+2006-03-06  Mark Wielaard  <mark@klomp.org>
+
+	
+	* native/fdlibm/fdlibm.h (__ieee754_rem_pio2): Return an int32_t.
+	(isnan): Define explicitly isnan if it is not a macro.
+
 2006-03-06  Robert Schuster  <robertschuster@fsfe.org>
 
 	* javax/swing/text/GapContent.java:
